<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/q_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/item_quantity"
        android:textAllCaps="true"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:onClick="increment"

            android:text="@string/add_quantity_button" />

        <TextView
            android:paddingRight="8dp"
            android:paddingLeft="8dp"

            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/number_of_items" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/reduce_quantity_button"
            android:onClick="decrement" />
    </LinearLayout>

    <TextView
        android:id="@+id/price_text_viewA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_of_items"
        android:layout_marginBottom="16dp"
        />
    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_text"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitOrder"
        android:text="@string/send_order" />

</LinearLayout>